# AI-Powered-Business-Operating-Systems-

./: README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json
api/v1/: __init__.py
app/: __init__.py
app/agents/: __init__.py
app/core/: __init__.py  config.py  dependencies.py  exceptions.py  permissions.py  security.py
app/database/: __init__.py  session.py
app/middleware/: __init__.py
app/models/: ai_usage.py  audit_log.py  company.py  task.py  workspace.py
app/runtime/: __init__.py
app/schemas/: agent.py  analytics.py  audit.py  auth.py  common.py  conversation.py  customer.py  document.py  meeting.py  memory.py  task.py  user.py  workspace.py
app/workers/: __init__.py
app/workers/tasks/: __init__.py
database/: base.py
integrations/: __init__.py
integrations/documents/: __init__.py
integrations/documents/parsers/: __init__.py
memory/: __init__.py
models/: __init__.py  billing.py  conversation.py  customer.py  document.py  knowledge.py  meeting.py  memory.py  notification.py  user.py
repositories/: __init__.py
runtime/providers/: __init__.py
src/: App.tsx  index.css
src/components/layout/: AppLayout.tsx  MobileNav.tsx  Sidebar.tsx  Topbar.tsx
src/components/shared/: PageHeader.tsx  StatCard.tsx
src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Skeleton.tsx  Tabs.tsx
src/features/analytics/: AnalyticsPage.tsx
src/features/audit/: AuditPage.tsx
src/features/auth/: LoginPage.tsx  RegisterPage.tsx
src/features/chat/: ChatPage.tsx
src/features/customers/: CustomersPage.tsx
src/features/dashboard/: DashboardPage.tsx
src/features/knowledge/: KnowledgePage.tsx
src/features/landing/: CustomerLogos.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  LandingPage.tsx  Navbar.tsx  Pricing.tsx  Testimonials.tsx
src/features/meetings/: MeetingsPage.tsx
src/lib/: axios.ts  constants.ts  utils.ts
src/routes/: index.tsx
src/stores/: authStore.ts  chatStore.ts  sidebarStore.ts  themeStore.ts
src/types/: index.ts
(+3 files in other folders)
